fix overflow x

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   scroll-behavior: smooth;
+  max-width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 h2 {
